--- a/footer.html
+++ b/footer.html
@@ -1,60 +1,113 @@
-<footer style="background-color: #000; color: white; padding: 40px 20px; font-family: sans-serif;">
-    <!-- Discount Signup Section -->
-    <div style="background-color: #b490e8; border-radius: 20px; padding: 40px; text-align: center; margin-bottom: 40px;">
-      <h2 style="font-size: 32px; font-weight: bold;">Get discounts instantly</h2>
-      <p style="font-size: 16px; margin: 20px 0;">
-        To save you just have to log in to your account and look for the experiences with the green or yellow color code.
-        On your first reservation you can enjoy a <strong>10% discount</strong>.
-      </p>
-      <form style="display: flex; justify-content: center; margin-top: 20px;">
-        <input type="email" placeholder="Enter your email" style="padding: 10px 20px; border-radius: 20px 0 0 20px; border: none; width: 300px;">
-        <button type="submit" style="padding: 10px 20px; background-color: #000; color: white; border: none; border-radius: 0 20px 20px 0;">Get started</button>
-      </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menswear Collection</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+            color: #333;
+        }
+        .container {
+        width: 90%;
+        max-width: 1000px; /* Chhota kar diya */
+        margin: 20px auto;
+        padding: 100px;  /* Yeh 4 taraf padding dega */
+        text-align: center;
+}
+
+        .description {
+            margin-bottom: 30px;
+            line-height: 1.6;
+            color: #666;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            gap: 10px;
+        }
+        .grid img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .small {
+            grid-column: span 1;
+            grid-row: span 1;
+        }
+        .large {
+            grid-column: 3 / 4;
+            grid-row: 1 / 3;
+        }
+        .info-section {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ccc;
+        }
+        .info-box {
+            flex: 1;
+            padding: 0 15px;
+        }
+        .info-box h4 {
+            margin-bottom: 5px;
+            font-size: 14px;
+            color: #333;
+        }
+        .info-box p {
+            font-size: 12px;
+            color: #999;
+        }
+        .info-box a {
+            text-decoration: none;
+            font-size: 12px;
+            color: #333;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="description">
+            <p>
+                Nullam aliquet vestibulum augue non varius. Cras nec congue elit. 
+                Donec tristique vel ante nec aliquam. Praesent urna tellus, 
+                laoreet vel tellus ullamcorper, fermentum facilisis est.
+                Suspendisse tellus erat, sagittis vel lorem non, posuere tincidunt nulla.
+            </p>
+        </div>
+
+        <div class="grid">
+            <img src="ayrus-hill-FkNIKhdnnjQ-unsplash.jpg" alt="Product 1" class="small">
+            <img src="ruthson-zimmerman-Ws4wd-vJ9M0-unsplash.jpg" alt="Product 2" class="small">
+            <img src="closeup-belt.jpg" alt="Product 3" class="small">
+            <img src="istockphoto-1329695616-1024x1024.jpg" alt="Product 4" class="small">
+            <img src="max-titov-Pp6OwIz2-kg-unsplash.jpg" alt="Product 5" class="large">
+        </div>
+
+        <div class="info-section">
+            <div class="info-box">
+                <h4>FREE DELIVERY WORLDWIDE</h4>
+                <p>No minimum purchase</p>
+                <a href="#">→</a>
+            </div>
+            <div class="info-box">
+                <h4>FREE RETURNS IN-STORE</h4>
+                <p>Find out how</p>
+                <a href="#">→</a>
+            </div>
+            <div class="info-box">
+                <h4>SECURE SHOPPING GUARANTEE</h4>
+                <p>Learn more</p>
+                <a href="#">→</a>
+            </div>
+        </div>
     </div>
-  
-    <!-- Flex Container for Newsletter + Footer Links -->
-    <div style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 40px; margin-bottom: 40px;">
-      <!-- Newsletter Section -->
-      <div style="flex: 1; min-width: 250px; max-width: 400px;">
-        <h3 style="font-weight: bold;">Sign up for our newsletter</h3>
-        <p>Don't worry, we reserve our newsletter for important news so we only send a few updates a year.</p>
-        <button style="padding: 10px 20px; border: 1px solid #b490e8; border-radius: 20px; color: white; background-color: transparent; margin-top: 10px;">Subscribe</button>
-      </div>
-  
-      <!-- Footer Links -->
-      <div style="flex: 2; display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
-        <div>
-          <h4 style="font-weight: bold;">Help and services</h4>
-          <p>How does it work</p>
-          <p>FAQS</p>
-          <p>Contact</p>
-        </div>
-        <div>
-          <h4 style="font-weight: bold;">To explore</h4>
-          <p>Accommodations</p>
-          <p>Experiences</p>
-          <p>Blog</p>
-        </div>
-        <div>
-          <h4 style="font-weight: bold;">Other possibilities</h4>
-          <p>Give away</p>
-          <p>Subscribe</p>
-        </div>
-        <div>
-          <img src="appstore.png" alt="App Store" style="height: 40px; margin: 10px 0;">
-          <img src="googleplay.png" alt="Google Play" style="height: 40px;">
-        </div>
-      </div>
-    </div>
-  
-    <!-- Footer Bottom -->
-    <div style="border-top: 1px solid #444; padding-top: 20px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-      <p>&copy; 2025 YourWebsite</p>
-      <div>
-        <img src="facebook-icon.png" alt="Facebook" style="height: 24px; margin-right: 10px;">
-        <img src="twitter-icon.png" alt="Twitter" style="height: 24px; margin-right: 10px;">
-        <img src="instagram-icon.png" alt="Instagram" style="height: 24px;">
-      </div>
-    </div>
-  </footer>
-  
+</body>
+</html>
